# random-orgy-sphere-chat

./: README.md  bun.lockb  package.json
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/database/: db.rs  models.rs
backend/src/socket/: handler.rs
frontend/: bun.lockb  package.json
frontend/src/components/: MessagesBackground.js
frontend/src/pages/: _app.js  index.js
frontend/src/styles/: globals.css
