[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["ws", "macros"] }
tokio = { version = "1.26.0" }
serde = "1.0.163"
serde_json = "1.0.96"
mongodb = "2.5.0"
futures = "0.3.28"
tower-http = { version = "0.4.1", features = ["cors"] }
dotenv = "0.15.0"
chrono = "0.4.31"

[profile.release]
strip = true
lto = true
opt-level = 3

